Fix tests, remove temp code