@@ -3,10 +3,10 @@ package org.opencds.cqf.fhir.cr.cli.command;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.parser.IParser;
+import ca.uhn.fhir.repository.IRepository;
 import com.google.common.base.Stopwatch;
 import java.io.BufferedWriter;
 import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -24,8 +24,6 @@ import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.commons.lang3.tuple.Pair;
-import org.cqframework.cql.cql2elm.CqlCompiler;
-import org.cqframework.cql.cql2elm.CqlCompilerOptions;
 import org.cqframework.cql.cql2elm.CqlCompilerOptions.Options;
 import org.cqframework.cql.cql2elm.CqlTranslatorOptions;
 import org.cqframework.cql.cql2elm.CqlTranslatorOptionsMapper;
@@ -41,7 +39,6 @@ import org.hl7.fhir.r5.context.IWorkerContext.ILoggingService;
 import org.opencds.cqf.cql.engine.execution.CqlEngine;
 import org.opencds.cqf.cql.engine.execution.EvaluationResult;
 import org.opencds.cqf.cql.engine.execution.ExpressionResult;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cql.CqlEngineOptions;
 import org.opencds.cqf.fhir.cql.CqlOptions;
 import org.opencds.cqf.fhir.cql.Engines;
@@ -202,11 +199,11 @@ public class CqlCommand implements Callable<Integer> {
             case R4:
                 return "4.0.1";
             case R5:
-                return "5.0.0-ballot";
+                return "5.0.0";
             case DSTU3:
                 return "3.0.2";
             default:
-                throw new IllegalArgumentException(String.format("Unsupported FHIR version %s", fhirVersion));
+                throw new IllegalArgumentException("Unsupported FHIR version %s".formatted(fhirVersion));
         }
     }
 
@@ -263,17 +260,20 @@ public class CqlCommand implements Callable<Integer> {
         MeasureEvaluationOptions evaluationOptions = new MeasureEvaluationOptions();
         evaluationOptions.setApplyScoringSetMembership(false);
         evaluationOptions.setEvaluationSettings(evaluationSettings);
-        R4MeasureProcessor measureProcessor = new R4MeasureProcessor(repository, evaluationOptions, new R4RepositorySubjectProvider(new SubjectProviderOptions()), new R4MeasureServiceUtils(repository));
+        R4MeasureProcessor measureProcessor = new R4MeasureProcessor(
+                repository,
+                evaluationOptions,
+                new R4RepositorySubjectProvider(new SubjectProviderOptions()),
+                new R4MeasureServiceUtils(repository));
 
         // hack to bring in Measure
         IParser parser = fhirContext.newJsonParser();
 
         Measure measure = null;
-        if(measureName != null && !measureName.contains("null")) {
+        if (measureName != null && !measureName.contains("null")) {
             InputStream is = new FileInputStream(measurePath + measureName + ".json");
-            measure = (org.hl7.fhir.r4.model.Measure)
-                parser.parseResource(is);
-            if(measure == null) {
+            measure = (org.hl7.fhir.r4.model.Measure) parser.parseResource(is);
+            if (measure == null) {
                 throw new IllegalArgumentException(String.format("measureName: %s not found", measureName));
             }
         }
@@ -283,19 +283,16 @@ public class CqlCommand implements Callable<Integer> {
         AtomicInteger counter = new AtomicInteger(0);
         for (var e : evaluations) {
             String basePath = resultsPath;
-            Path filepath = Paths.get(
-                basePath + this.library.libraryName + "/" + e.context.contextValue + ".txt");
+            Path filepath = Paths.get(basePath + this.library.libraryName + "/" + e.context.contextValue + ".txt");
 
-            // ✅ Skip if already written
             if (Files.exists(filepath)) {
-                System.out.println("⏭️ Skipping " + e.context.contextValue + " (already processed)");
                 continue;
             }
             // evaluations.parallelStream().forEach(e -> {
             var engine = Engines.forRepository(repository, evaluationSettings);
             // enable return all and equivalence
             engine.getState().getEngineOptions().add(CqlEngine.Options.EnableHedisCompatibilityMode);
-            //engine.getState().getEngineOptions().add(CqlCompilerOptions.EnableResultTypes);
+            // engine.getState().getEngineOptions().add(CqlCompilerOptions.EnableResultTypes);
             if (library.libraryUrl != null) {
                 var provider = new DefaultLibrarySourceProvider(Path.of(library.libraryUrl));
                 engine.getEnvironment()
@@ -314,39 +311,33 @@ public class CqlCommand implements Callable<Integer> {
             result.put(subjectId, cqlResult);
 
             // generate MeasureReport from ExpressionResult
-            if(measure != null) {
+            if (measure != null) {
                 String jsonReport;
-                if(periodStart != null && periodEnd != null) {
+                if (periodStart != null && periodEnd != null) {
                     var report = measureProcessor.evaluateMeasureResults(
-                        measure,
-                        LocalDate.parse(periodStart, DateTimeFormatter.ISO_LOCAL_DATE)
-                            .atStartOfDay(ZoneId.systemDefault()),
-                        LocalDate.parse(periodEnd, DateTimeFormatter.ISO_LOCAL_DATE)
-                            .atTime(LocalTime.MAX)
-                            .atZone(ZoneId.systemDefault()),
-                        "subject",
-                        Collections.singletonList(subjectId),
-                        result);
+                            measure,
+                            LocalDate.parse(periodStart, DateTimeFormatter.ISO_LOCAL_DATE)
+                                    .atStartOfDay(ZoneId.systemDefault()),
+                            LocalDate.parse(periodEnd, DateTimeFormatter.ISO_LOCAL_DATE)
+                                    .atTime(LocalTime.MAX)
+                                    .atZone(ZoneId.systemDefault()),
+                            "subject",
+                            Collections.singletonList(subjectId),
+                            result);
 
                     jsonReport = parser.encodeResourceToString(report);
                 } else {
                     var report = measureProcessor.evaluateMeasureResults(
-                        measure,
-                        null,
-                        null,
-                        "subject",
-                        Collections.singletonList(subjectId),
-                        result);
-                     jsonReport = parser.encodeResourceToString(report);
+                            measure, null, null, "subject", Collections.singletonList(subjectId), result);
+                    jsonReport = parser.encodeResourceToString(report);
                 }
 
-                writeJsonToFile(jsonReport, e.context.contextValue,
-                    basePath + this.library.libraryName + "/measurereports");
+                writeJsonToFile(
+                        jsonReport, e.context.contextValue, basePath + this.library.libraryName + "/measurereports");
             }
-            if(singleFile) {
-                // ✅ Write TXT result
-                writeResultToFile(cqlResult, e.context.contextValue,
-                    basePath + this.library.libraryName + "/txtresults");
+            if (singleFile) {
+                writeResultToFile(
+                        cqlResult, e.context.contextValue, basePath + this.library.libraryName + "/txtresults");
             } else {
                 writeResult(cqlResult);
             }
@@ -367,9 +358,10 @@ public class CqlCommand implements Callable<Integer> {
         return 0;
     }
 
-    private Repository createRepository(FhirContext fhirContext, String terminologyUrl, String modelUrl) {
-        Repository data = null;
-        Repository terminology = null;
+    private IRepository createRepository(
+            FhirContext fhirContext, String terminologyUrl, String modelUrl) {
+        IRepository data = null;
+        IRepository terminology = null;
 
         if (modelUrl != null) {
             Path path = Path.of(modelUrl);
@@ -377,7 +369,7 @@ public class CqlCommand implements Callable<Integer> {
         }
 
         if (terminologyUrl != null) {
-            terminology = new IgRepository(fhirContext, Paths.get(terminologyUrl));
+            terminology = new IgRepository(fhirContext, Path.of(terminologyUrl));
         }
 
         return new ProxyRepository(data, null, terminology);
@@ -405,12 +397,11 @@ public class CqlCommand implements Callable<Integer> {
             // Write JSON to file
             try (OutputStream out = Files.newOutputStream(outputPath)) {
                 out.write(json.getBytes());
-                System.out.println("✅ Saved MeasureReport to: " + outputPath.toAbsolutePath());
+                log.info(path + " written to: " + outputPath.toAbsolutePath());
             }
 
         } catch (IOException e) {
-            System.err.println("❌ Failed to write result for patient " + patientId);
-            e.printStackTrace();
+            log.error("Failed to write JSON for patient " + patientId, e);
         }
     }
 
@@ -430,11 +421,9 @@ public class CqlCommand implements Callable<Integer> {
                 }
             }
 
-            System.out.println("✅ Wrote result to: " + outputPath.toAbsolutePath());
-
+        log.info("Wrote result to: " + outputPath.toAbsolutePath());
         } catch (IOException e) {
-            System.err.println("❌ Failed to write result for patient " + patientId);
-            e.printStackTrace();
+            log.error("Failed to write result for patient " + patientId);
         }
     }
 
@@ -444,9 +433,8 @@ public class CqlCommand implements Callable<Integer> {
         }
 
         String result = "";
-        if (value instanceof Iterable) {
+        if (value instanceof Iterable<?> values) {
             result += "[";
-            Iterable<?> values = (Iterable<?>) value;
             for (Object o : values) {
                 result += (tempConvert(o) + ", ");
             }
@@ -456,17 +444,16 @@ public class CqlCommand implements Callable<Integer> {
             }
 
             result += "]";
-        } else if (value instanceof IBaseResource) {
-            IBaseResource resource = (IBaseResource) value;
+        } else if (value instanceof IBaseResource resource) {
             result = resource.fhirType()
                     + (resource.getIdElement() != null
                                     && resource.getIdElement().hasIdPart()
                             ? "(id=" + resource.getIdElement().getIdPart() + ")"
                             : "");
-        } else if (value instanceof IBase) {
-            result = ((IBase) value).fhirType();
-        } else if (value instanceof IBaseDatatype) {
-            result = ((IBaseDatatype) value).fhirType();
+        } else if (value instanceof IBase base) {
+            result = base.fhirType();
+        } else if (value instanceof IBaseDatatype datatype) {
+            result = datatype.fhirType();
         } else {
             result = value.toString();
         }
