@@ -36,9 +36,8 @@ public class TaskResolver extends BaseRequestResourceResolver {
 
         if (activityDefinition.hasExtension(TARGET_STATUS_URL)) {
             var value = activityDefinition.getExtensionByUrl(TARGET_STATUS_URL).getValue();
-            if (value instanceof StringType) {
-                task.setStatus(Task.TaskStatus.valueOf(
-                        ((StringType) value).asStringValue().toUpperCase()));
+            if (value instanceof StringType type) {
+                task.setStatus(Task.TaskStatus.valueOf(type.asStringValue().toUpperCase()));
             } else {
                 logger.debug(
                         "Extension {} should have a value of type {}", TARGET_STATUS_URL, StringType.class.getName());
@@ -55,7 +54,7 @@ public class TaskResolver extends BaseRequestResourceResolver {
 
         if (activityDefinition.hasUrl()) {
             task.setInstantiatesCanonical(activityDefinition.getUrl()
-                    + (activityDefinition.hasVersion() ? String.format("|%s", activityDefinition.getVersion()) : ""));
+                    + (activityDefinition.hasVersion() ? "|%s".formatted(activityDefinition.getVersion()) : ""));
         }
 
         if (activityDefinition.hasCode()) {
