@@ -1,5 +1,6 @@
 package org.opencds.cqf.fhir.cr.measure.dstu3;
 
+import ca.uhn.fhir.repository.IRepository;
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
 import java.time.ZonedDateTime;
 import java.util.Arrays;
@@ -21,7 +22,6 @@ import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.opencds.cqf.cql.engine.execution.CqlEngine;
 import org.opencds.cqf.cql.engine.fhir.model.Dstu3FhirModelResolver;
 import org.opencds.cqf.cql.engine.runtime.Interval;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cql.Engines;
 import org.opencds.cqf.fhir.cql.LibraryEngine;
 import org.opencds.cqf.fhir.cr.measure.MeasureEvaluationOptions;
@@ -33,17 +33,19 @@ import org.opencds.cqf.fhir.utility.repository.FederatedRepository;
 import org.opencds.cqf.fhir.utility.repository.InMemoryFhirRepository;
 
 public class Dstu3MeasureProcessor {
-    private final Repository repository;
+    private final IRepository repository;
     private final MeasureEvaluationOptions measureEvaluationOptions;
     private final SubjectProvider subjectProvider;
     private final MeasureProcessorUtils measureProcessorUtils = new MeasureProcessorUtils();
 
-    public Dstu3MeasureProcessor(Repository repository, MeasureEvaluationOptions measureEvaluationOptions) {
+    public Dstu3MeasureProcessor(IRepository repository, MeasureEvaluationOptions measureEvaluationOptions) {
         this(repository, measureEvaluationOptions, new Dstu3RepositorySubjectProvider());
     }
 
     public Dstu3MeasureProcessor(
-            Repository repository, MeasureEvaluationOptions measureEvaluationOptions, SubjectProvider subjectProvider) {
+            IRepository repository,
+            MeasureEvaluationOptions measureEvaluationOptions,
+            SubjectProvider subjectProvider) {
         this.repository = Objects.requireNonNull(repository);
         this.measureEvaluationOptions =
                 measureEvaluationOptions != null ? measureEvaluationOptions : MeasureEvaluationOptions.defaultOptions();
@@ -134,7 +136,7 @@ public class Dstu3MeasureProcessor {
                 return MeasureReportType.SUMMARY;
             default:
                 throw new InvalidRequestException(
-                        String.format("Unsupported MeasureEvalType: %s", measureEvalType.toCode()));
+                        "Unsupported MeasureEvalType: %s".formatted(measureEvalType.toCode()));
         }
     }
 
@@ -145,9 +147,8 @@ public class Dstu3MeasureProcessor {
             lib = context.getEnvironment().getLibraryManager().resolveLibrary(id);
         } catch (CqlIncludeException e) {
             throw new IllegalStateException(
-                    String.format(
-                            "Unable to load CQL/ELM for library: %s. Verify that the Library resource is available in your environment and has CQL/ELM content embedded.",
-                            id.getId()),
+                    "Unable to load CQL/ELM for library: %s. Verify that the Library resource is available in your environment and has CQL/ELM content embedded."
+                            .formatted(id.getId()),
                     e);
         }
 
@@ -191,7 +192,7 @@ public class Dstu3MeasureProcessor {
     private void checkMeasureLibrary(Measure measure) {
         if (!measure.hasLibrary()) {
             throw new InvalidRequestException(
-                    String.format("Measure %s does not have a primary library specified", measure.getUrl()));
+                    "Measure %s does not have a primary library specified".formatted(measure.getUrl()));
         }
     }
 
@@ -204,10 +205,10 @@ public class Dstu3MeasureProcessor {
                 value = param.getResource();
             } else {
                 value = param.getValue();
-                if (value instanceof IPrimitiveType) {
+                if (value instanceof IPrimitiveType<?> type) {
                     // TODO: handle Code, CodeableConcept, Quantity, etc
                     // resolves Date/Time values
-                    value = modelResolver.toJavaPrimitive(((IPrimitiveType<?>) value).getValue(), value);
+                    value = modelResolver.toJavaPrimitive(type.getValue(), value);
                 }
             }
             if (parameterMap.containsKey(param.getName())) {
