@@ -16,6 +16,7 @@ import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.US
 import static org.opencds.cqf.fhir.cr.measure.constant.MeasureReportConstants.US_COUNTRY_DISPLAY;
 
 import ca.uhn.fhir.model.api.IQueryParameterType;
+import ca.uhn.fhir.repository.IRepository;
 import ca.uhn.fhir.rest.param.TokenParam;
 import ca.uhn.fhir.rest.param.UriParam;
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
@@ -47,7 +48,6 @@ import org.hl7.fhir.r4.model.MeasureReport;
 import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.SearchParameter;
 import org.hl7.fhir.r4.model.StringType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cr.measure.common.MeasureEvalType;
 import org.opencds.cqf.fhir.cr.measure.common.MeasureReportType;
 import org.opencds.cqf.fhir.cr.measure.common.MeasureScoring;
@@ -56,9 +56,9 @@ import org.opencds.cqf.fhir.utility.Ids;
 
 public class R4MeasureServiceUtils {
     private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(R4MeasureServiceUtils.class);
-    private final Repository repository;
+    private final IRepository repository;
 
-    public R4MeasureServiceUtils(Repository repository) {
+    public R4MeasureServiceUtils(IRepository repository) {
         this.repository = repository;
     }
 
@@ -88,17 +88,17 @@ public class R4MeasureServiceUtils {
             .setDate(MEASUREREPORT_SUPPLEMENTALDATA_SEARCHPARAMETER_DEFINITION_DATE)
             .setPublisher("HL7 International - Clinical Quality Information Work Group")
             .setContact(CQI_CONTACTDETAIL)
-            .setDescription(String.format(
-                    "Returns resources (supplemental data) from references on extensions on the MeasureReport with urls matching %s.",
-                    MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
+            .setDescription(
+                    "Returns resources (supplemental data) from references on extensions on the MeasureReport with urls matching %s."
+                            .formatted(MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
             .setJurisdiction(US_JURISDICTION_CODING)
             .addBase("MeasureReport")
             .setCode("supplemental-data")
             .setType(Enumerations.SearchParamType.REFERENCE)
-            .setExpression(String.format(
-                    "MeasureReport.extension('%s').value", MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
-            .setXpath(String.format(
-                    "f:MeasureReport/f:extension[@url='%s'].value", MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
+            .setExpression(
+                    "MeasureReport.extension('%s').value".formatted(MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
+            .setXpath("f:MeasureReport/f:extension[@url='%s'].value"
+                    .formatted(MEASUREREPORT_MEASURE_SUPPLEMENTALDATA_EXTENSION))
             .setXpathUsage(SearchParameter.XPathUsageType.NORMAL)
             .setTitle("Supplemental Data")
             .setId("deqm-measurereport-supplemental-data");
@@ -111,7 +111,7 @@ public class R4MeasureServiceUtils {
     }
 
     public static String getFullUrl(String serverAddress, String fhirType, String elementId) {
-        return String.format("%s%s/%s", serverAddress + (serverAddress.endsWith("/") ? "" : "/"), fhirType, elementId);
+        return "%s%s/%s".formatted(serverAddress + (serverAddress.endsWith("/") ? "" : "/"), fhirType, elementId);
     }
 
     public void ensureSupplementalDataElementSearchParameter() {
@@ -215,13 +215,12 @@ public class R4MeasureServiceUtils {
 
         if (bundle != null && !bundle.getEntry().isEmpty()) {
             if (bundle.getEntry().size() > 1) {
-                var msg = String.format(
-                        "Measure Identifier: %s, found more than one matching measure resource", identifier);
+                var msg = "Measure Identifier: %s, found more than one matching measure resource".formatted(identifier);
                 throw new InvalidRequestException(msg);
             }
             return (Measure) bundle.getEntryFirstRep().getResource();
         } else {
-            var msg = String.format("Measure Identifier: %s, found no matching measure resources", identifier);
+            var msg = "Measure Identifier: %s, found no matching measure resources".formatted(identifier);
             throw new InvalidRequestException(msg);
         }
     }
@@ -253,9 +252,10 @@ public class R4MeasureServiceUtils {
         return distinctByKey(measures, Measure::getUrl);
     }
 
-    public static <T> List<T> distinctByKey(List<T> list, Function<? super T, ?> keyExtractor) {
-        Set<Object> seen = new HashSet<>();
+    public static <T, K> List<T> distinctByKey(List<T> list, Function<T, K> keyExtractor) {
+        Set<K> seen = new HashSet<>();
         return list.stream()
+                .filter(element -> element != null)
                 .filter(element -> seen.add(keyExtractor.apply(element)))
                 .collect(Collectors.toList());
     }
@@ -297,8 +297,8 @@ public class R4MeasureServiceUtils {
             return getMeasureGroupScoringTypes(measure);
         } else {
             if (!measure.hasScoring()) {
-                throw new InvalidRequestException(String.format(
-                        "Measure: %s, does not have a defined Measure Scoring Type.", measure.getIdPart()));
+                throw new InvalidRequestException(
+                        "Measure: %s, does not have a defined Measure Scoring Type.".formatted(measure.getIdPart()));
             }
             return Collections.singletonList(MeasureScoring.fromCode(
                     measure.getScoring().getCodingFirstRep().getCode()));
