@@ -3,6 +3,7 @@ package org.opencds.cqf.fhir.cr.questionnaire.generate;
 import static org.opencds.cqf.fhir.utility.SearchHelper.searchRepositoryByCanonical;
 
 import ca.uhn.fhir.context.FhirVersionEnum;
+import ca.uhn.fhir.repository.IRepository;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
@@ -14,7 +15,6 @@ import org.hl7.fhir.instance.model.api.IBaseExtension;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.ICompositeType;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.utility.Ids;
 import org.opencds.cqf.fhir.utility.adapter.IAdapterFactory;
 import org.opencds.cqf.fhir.utility.adapter.IElementDefinitionAdapter;
@@ -25,11 +25,11 @@ public class GenerateProcessor implements IGenerateProcessor {
     protected static final Logger logger = LoggerFactory.getLogger(GenerateProcessor.class);
     protected static final String NO_BASE_DEFINITION_ERROR =
             "An error occurred searching for base definition with url (%s): %s";
-    protected final Repository repository;
+    protected final IRepository repository;
     protected final FhirVersionEnum fhirVersion;
     protected final ItemGenerator itemGenerator;
 
-    public GenerateProcessor(Repository repository) {
+    public GenerateProcessor(IRepository repository) {
         this.repository = repository;
         this.fhirVersion = repository.fhirContext().getVersion().getVersion();
         itemGenerator = new ItemGenerator(repository);
@@ -51,8 +51,7 @@ public class GenerateProcessor implements IGenerateProcessor {
                 generate(id == null ? request.getProfile().getIdElement().getIdPart() : id));
         var formatter = new SimpleDateFormat("yyyy-MM-dd-hh.mm.ss");
         request.getQuestionnaireAdapter()
-                .setVersion(
-                        String.format("%s-%s", request.getProfileAdapter().getVersion(), formatter.format(new Date())));
+                .setVersion("%s-%s".formatted(request.getProfileAdapter().getVersion(), formatter.format(new Date())));
         var item = generateItem(request);
         if (item != null) {
             request.addQuestionnaireItem(item.getLeft());
