@@ -2,6 +2,7 @@ package org.opencds.cqf.fhir.cr.visitor;
 
 import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.model.api.TemporalPrecisionEnum;
+import ca.uhn.fhir.repository.IRepository;
 import ca.uhn.fhir.rest.server.exceptions.UnprocessableEntityException;
 import java.util.Date;
 import java.util.Optional;
@@ -11,14 +12,13 @@ import org.hl7.fhir.instance.model.api.IBaseParameters;
 import org.hl7.fhir.instance.model.api.IBaseReference;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.utility.BundleHelper;
 import org.opencds.cqf.fhir.utility.Canonicals;
 import org.opencds.cqf.fhir.utility.PackageHelper;
 import org.opencds.cqf.fhir.utility.adapter.IKnowledgeArtifactAdapter;
 
 public class ApproveVisitor extends BaseKnowledgeArtifactVisitor {
-    public ApproveVisitor(Repository repository) {
+    public ApproveVisitor(IRepository repository) {
         super(repository);
     }
 
@@ -129,8 +129,8 @@ public class ApproveVisitor extends BaseKnowledgeArtifactVisitor {
                     return r5ArtifactAssessment;
 
                 default:
-                    throw new UnprocessableEntityException(String.format(
-                            "Unsupported version of FHIR: %s", fhirVersion().getFhirVersionString()));
+                    throw new UnprocessableEntityException("Unsupported version of FHIR: %s"
+                            .formatted(fhirVersion().getFhirVersionString()));
             }
         } catch (FHIRException e) {
             throw new UnprocessableEntityException(e.getMessage());
@@ -152,7 +152,7 @@ public class ApproveVisitor extends BaseKnowledgeArtifactVisitor {
 
             default:
                 throw new UnprocessableEntityException(
-                        String.format("Unsupported version of FHIR: %s", fhirVersion.getFhirVersionString()));
+                        "Unsupported version of FHIR: %s".formatted(fhirVersion.getFhirVersionString()));
         }
     }
 }
