@@ -12,12 +12,13 @@ import static org.opencds.cqf.fhir.utility.VersionUtilities.canonicalTypeForVers
 
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.IParser;
+import ca.uhn.fhir.repository.IRepository;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import org.hl7.fhir.instance.model.api.IBase;
@@ -28,7 +29,6 @@ import org.hl7.fhir.instance.model.api.IBaseParameters;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
 import org.opencds.cqf.cql.engine.model.ModelResolver;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cql.EvaluationSettings;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.SEARCH_FILTER_MODE;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.TERMINOLOGY_FILTER_MODE;
@@ -46,7 +46,7 @@ public class TestLibrary {
     public static final String CLASS_PATH = "org/opencds/cqf/fhir/cr/shared";
 
     private static InputStream open(String asset) {
-        var path = Paths.get(getResourcePath(TestLibrary.class) + "/" + CLASS_PATH + "/" + asset);
+        var path = Path.of(getResourcePath(TestLibrary.class) + "/" + CLASS_PATH + "/" + asset);
         var file = path.toFile();
         try {
             return new FileInputStream(file);
@@ -68,17 +68,17 @@ public class TestLibrary {
     }
 
     public static class Given {
-        private Repository repository;
+        private IRepository repository;
         private EvaluationSettings evaluationSettings;
 
-        public Given repository(Repository repository) {
+        public Given repository(IRepository repository) {
             this.repository = repository;
             return this;
         }
 
         public Given repositoryFor(FhirContext fhirContext, String repositoryPath) {
             this.repository = new IgRepository(
-                    fhirContext, Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    fhirContext, Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
             return this;
         }
 
@@ -87,10 +87,9 @@ public class TestLibrary {
             return this;
         }
 
-        public LibraryProcessor buildProcessor(Repository repository) {
-            if (repository instanceof IgRepository) {
-                ((IgRepository) repository)
-                        .setOperationProvider(TestOperationProvider.newProvider(repository.fhirContext()));
+        public LibraryProcessor buildProcessor(IRepository repository) {
+            if (repository instanceof IgRepository igRepository) {
+                igRepository.setOperationProvider(TestOperationProvider.newProvider(repository.fhirContext()));
             }
             if (evaluationSettings == null) {
                 evaluationSettings = EvaluationSettings.getDefault();
@@ -112,7 +111,7 @@ public class TestLibrary {
     }
 
     public static class When {
-        private final Repository repository;
+        private final IRepository repository;
         private final LibraryProcessor processor;
         private final IParser jsonParser;
 
@@ -122,16 +121,16 @@ public class TestLibrary {
         private String subjectId;
         private List<String> expression;
         private boolean useServerData;
-        private Repository dataRepository;
-        private Repository contentRepository;
-        private Repository terminologyRepository;
+        private IRepository dataRepository;
+        private IRepository contentRepository;
+        private IRepository terminologyRepository;
         private IBaseBundle additionalData;
         private List<IBaseBackboneElement> prefetchData;
         private IIdType additionalDataId;
         private IBaseParameters parameters;
         private Boolean isPackagePut;
 
-        public When(Repository repository, LibraryProcessor processor) {
+        public When(IRepository repository, LibraryProcessor processor) {
             this.repository = repository;
             this.processor = processor;
             useServerData = true;
@@ -273,14 +272,14 @@ public class TestLibrary {
     }
 
     public static class Evaluation {
-        final Repository repository;
+        final IRepository repository;
         final IBaseParameters result;
         final IParser jsonParser;
         final ModelResolver modelResolver;
         final List<IBaseResource> parameter;
 
         @SuppressWarnings("unchecked")
-        public Evaluation(Repository repository, IBaseParameters result) {
+        public Evaluation(IRepository repository, IBaseParameters result) {
             this.repository = repository;
             this.result = result;
             jsonParser = this.repository.fhirContext().newJsonParser().setPrettyPrint(true);
