@@ -17,12 +17,13 @@ import static org.opencds.cqf.fhir.utility.SearchHelper.readRepository;
 
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.IParser;
+import ca.uhn.fhir.repository.IRepository;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -36,7 +37,6 @@ import org.hl7.fhir.instance.model.api.IIdType;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.json.JSONException;
 import org.opencds.cqf.cql.engine.model.ModelResolver;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cql.EvaluationSettings;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.SEARCH_FILTER_MODE;
 import org.opencds.cqf.fhir.cql.engine.retrieve.RetrieveSettings.TERMINOLOGY_FILTER_MODE;
@@ -57,7 +57,7 @@ public class TestPlanDefinition {
     public static final String CLASS_PATH = "org/opencds/cqf/fhir/cr/shared";
 
     private static InputStream open(String asset) {
-        var path = Paths.get(getResourcePath(TestPlanDefinition.class) + "/" + CLASS_PATH + "/" + asset);
+        var path = Path.of(getResourcePath(TestPlanDefinition.class) + "/" + CLASS_PATH + "/" + asset);
         var file = path.toFile();
         try {
             return new FileInputStream(file);
@@ -79,17 +79,17 @@ public class TestPlanDefinition {
     }
 
     public static class Given {
-        private Repository repository;
+        private IRepository repository;
         private EvaluationSettings evaluationSettings;
 
-        public Given repository(Repository repository) {
+        public Given repository(IRepository repository) {
             this.repository = repository;
             return this;
         }
 
         public Given repositoryFor(FhirContext fhirContext, String repositoryPath) {
             this.repository = new IgRepository(
-                    fhirContext, Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    fhirContext, Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
             return this;
         }
 
@@ -98,10 +98,9 @@ public class TestPlanDefinition {
             return this;
         }
 
-        public PlanDefinitionProcessor buildProcessor(Repository repository) {
-            if (repository instanceof IgRepository) {
-                ((IgRepository) repository)
-                        .setOperationProvider(TestOperationProvider.newProvider(repository.fhirContext()));
+        public PlanDefinitionProcessor buildProcessor(IRepository repository) {
+            if (repository instanceof IgRepository igRepository) {
+                igRepository.setOperationProvider(TestOperationProvider.newProvider(repository.fhirContext()));
             }
             if (evaluationSettings == null) {
                 evaluationSettings = EvaluationSettings.getDefault();
@@ -123,7 +122,7 @@ public class TestPlanDefinition {
     }
 
     public static class When {
-        private final Repository repository;
+        private final IRepository repository;
         private final PlanDefinitionProcessor processor;
         private final IParser jsonParser;
 
@@ -134,16 +133,16 @@ public class TestPlanDefinition {
         private String practitionerId;
         private String organizationId;
         private boolean useServerData;
-        private Repository dataRepository;
-        private Repository contentRepository;
-        private Repository terminologyRepository;
+        private IRepository dataRepository;
+        private IRepository contentRepository;
+        private IRepository terminologyRepository;
         private IBaseBundle additionalData;
         private IIdType additionalDataId;
         private List<? extends IBaseBackboneElement> prefetchData;
         private IBaseParameters parameters;
         private boolean isPackagePut;
 
-        public When(Repository repository, PlanDefinitionProcessor processor) {
+        public When(IRepository repository, PlanDefinitionProcessor processor) {
             this.repository = repository;
             this.processor = processor;
             useServerData = true;
@@ -316,7 +315,7 @@ public class TestPlanDefinition {
     }
 
     public static class GeneratedBundle {
-        final Repository repository;
+        final IRepository repository;
         final IBaseBundle generatedBundle;
         final IParser jsonParser;
         final ModelResolver modelResolver;
@@ -324,7 +323,7 @@ public class TestPlanDefinition {
         public IBaseResource questionnaireResponse;
         Map<String, IBaseBackboneElement> items;
 
-        public GeneratedBundle(Repository repository, IBaseBundle generatedBundle) {
+        public GeneratedBundle(IRepository repository, IBaseBundle generatedBundle) {
             this.repository = repository;
             this.generatedBundle = generatedBundle;
             jsonParser = this.repository.fhirContext().newJsonParser().setPrettyPrint(true);
@@ -414,11 +413,10 @@ public class TestPlanDefinition {
         @SuppressWarnings("unchecked")
         public GeneratedBundle hasQuestionnaireResponseItemValue(String linkId, String value) {
             var answerPath = modelResolver.resolvePath(items.get(linkId), "answer");
-            var answers = answerPath instanceof List<?>
-                    ? ((List<?>) answerPath)
-                            .stream()
-                                    .map(a -> (IPrimitiveType<String>) modelResolver.resolvePath(a, "value"))
-                                    .toList()
+            var answers = answerPath instanceof List<?> l
+                    ? l.stream()
+                            .map(a -> (IPrimitiveType<String>) modelResolver.resolvePath(a, "value"))
+                            .toList()
                     : null;
             assertNotNull(answers);
             assertTrue(
@@ -448,12 +446,12 @@ public class TestPlanDefinition {
     }
 
     public static class GeneratedCarePlan {
-        final Repository repository;
+        final IRepository repository;
         final IBaseResource generatedCarePlan;
         final IParser jsonParser;
         final ModelResolver modelResolver;
 
-        public GeneratedCarePlan(Repository repository, IBaseResource generatedCarePlan) {
+        public GeneratedCarePlan(IRepository repository, IBaseResource generatedCarePlan) {
             this.repository = repository;
             this.generatedCarePlan = generatedCarePlan;
             jsonParser = this.repository.fhirContext().newJsonParser().setPrettyPrint(true);
