@@ -19,13 +19,13 @@ import static org.opencds.cqf.fhir.utility.Constants.APPLY_PARAMETER_USER_TYPE;
 import static org.opencds.cqf.fhir.utility.Constants.APPLY_PARAMETER_USE_SERVER_DATA;
 
 import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.repository.IRepository;
 import org.hl7.fhir.instance.model.api.IBaseBundle;
 import org.hl7.fhir.instance.model.api.IBaseDatatype;
 import org.hl7.fhir.instance.model.api.IBaseParameters;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
-import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.utility.adapter.IAdapterFactory;
 import org.opencds.cqf.fhir.utility.monad.Eithers;
 import org.opencds.cqf.fhir.utility.repository.operations.IActivityDefinitionProcessorFactory;
@@ -49,7 +49,7 @@ public class RepositoryOperationProvider implements IRepositoryOperationProvider
 
     @SuppressWarnings("unchecked")
     public <C extends IPrimitiveType<String>, R extends IBaseResource> R invokeOperation(
-            Repository repository, IIdType id, String resourceType, String operationName, IBaseParameters parameters) {
+            IRepository repository, IIdType id, String resourceType, String operationName, IBaseParameters parameters) {
         if (resourceType.equals("ActivityDefinition") && activityDefinitionProcessorFactory != null) {
             var processor = activityDefinitionProcessorFactory.create(repository);
             var paramMap = operationParametersParser.getParameterParts(parameters);
@@ -81,7 +81,7 @@ public class RepositoryOperationProvider implements IRepositoryOperationProvider
 
                 default:
                     throw new IllegalArgumentException(
-                            String.format("(%s) operation not supported for type (%s)", operationName, resourceType));
+                            "(%s) operation not supported for type (%s)".formatted(operationName, resourceType));
             }
         }
         return null;
